modificaciones en form de contacto y estilos

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "next": "^15.1.7",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.1.2"
